An object crashes versions of blender past 11f2c65128 #60545

Closed
opened 2019-01-15 22:29:21 +01:00 by Marshall Dale Tavares · 7 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: GTX 1060 6 gigabyte (The old one)

Blender Version
Broken: Every version I've tried past the version in "worked"

Worked: 11f2c65128dc-windows64 2019-01-02

Short description of error
I was editing this mesh object as part of a more complex model, hit some unknown buttons, one of which started the animation counter playing, I press escape to stop it, and blender crashes. I'm not sure if this took place on the one that worked that I still had around or the newer one, but for whatever reason the older version (That has the old preferences menu, not sure if it matters) can open and edit it fine.

Exact steps for others to reproduce the error
Open the blender (bug ish.blend) file, select the object, edit mode, select a single vertex with right click and blender crashes.

bug ish.blend

**System Information** Operating system: Windows 10 64 bit Graphics card: GTX 1060 6 gigabyte (The old one) **Blender Version** Broken: Every version I've tried past the version in "worked" Worked: 11f2c65128dc-windows64 2019-01-02 **Short description of error** I was editing this mesh object as part of a more complex model, hit some unknown buttons, one of which started the animation counter playing, I press escape to stop it, and blender crashes. I'm not sure if this took place on the one that worked that I still had around or the newer one, but for whatever reason the older version (That has the old preferences menu, not sure if it matters) can open and edit it fine. **Exact steps for others to reproduce the error** Open the blender (bug ish.blend) file, select the object, edit mode, select a single vertex with right click and blender crashes. [bug ish.blend](https://archive.blender.org/developer/F6299043/bug_ish.blend)

Added subscriber: @Phos

Added subscriber: @Phos
Marshall Dale Tavares changed title from An object crashes versions of blender past to An object crashes versions of blender past 11f2c65128dc 2019-01-15 22:30:03 +01:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

The error happens during selection.

__GI_raise(int sig) (/build/glibc-OTsEL5/glibc-2.27/sysdeps/unix/sysv/linux/raise.c:51)
__GI_abort() (/build/glibc-OTsEL5/glibc-2.27/stdlib/abort.c:79)
__assert_fail_base(const char * fmt, const char * assertion, const char * file, unsigned int line, const char * function) (/build/glibc-OTsEL5/glibc-2.27/assert/assert.c:92)
__GI___assert_fail(const char * assertion, const char * file, unsigned int line, const char * function) (/build/glibc-OTsEL5/glibc-2.27/assert/assert.c:101)
GPU_vertbuf_raw_step(GPUVertBufRaw * a) (/home/jacques/blender-git/blender/source/blender/gpu/GPU_vertex_buffer.h:108)
mesh_create_edit_select_id(MeshRenderData * rdata, GPUVertBuf * vbo_pos, GPUVertBuf * vbo_verts, GPUVertBuf * vbo_edges, GPUVertBuf * vbo_faces) (/home/jacques/blender-git/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:2680)
DRW_mesh_batch_cache_create_requested(Object * ob, Mesh * me, const ToolSettings * ts, const _Bool is_paint_mode, const _Bool use_hide) (/home/jacques/blender-git/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:5387)
draw_object_backbufsel(Depsgraph * depsgraph, Scene * scene, View3D * v3d, RegionView3D * rv3d, Object * ob, short select_mode) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/drawobject.c:296)
backdrawview3d(struct Depsgraph * depsgraph, Scene * scene, ARegion * ar, View3D * v3d, Object * obact, Object * obedit, short select_mode) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_draw_legacy.c:263)
ED_view3d_backbuf_validate_with_select_mode(ViewContext * vc, short select_mode) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_draw_legacy.c:303)
ED_view3d_backbuf_validate(ViewContext * vc) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_draw_legacy.c:309)
unified_findnearest(ViewContext * vc, Base **bases, const uint bases_len, int * r_base_index, BMVert** r_eve, BMEdge **r_eed, BMFace** r_efa) (/home/jacques/blender-git/blender/source/blender/editors/mesh/editmesh_select.c:1032)
EDBM_select_pick(bContext * C, const int * mval, _Bool extend, _Bool deselect, _Bool toggle) (/home/jacques/blender-git/blender/source/blender/editors/mesh/editmesh_select.c:2060)
view3d_select_exec(bContext * C, wmOperator * op) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_select.c:1959)
view3d_select_invoke(bContext * C, wmOperator * op, const wmEvent * event) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_select.c:1994)
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1327)
wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const _Bool poll_only, wmEvent * event) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1570)
WM_operator_call_py(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties, ReportList * reports, const _Bool is_undo) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1648)
pyop_call(PyObject * UNUSED_self, PyObject * args) (/home/jacques/blender-git/blender/source/blender/python/intern/bpy_operator.c:260)
_PyMethodDef_RawFastCallKeywords (Unknown Source:0)
_PyCFunction_FastCallKeywords (Unknown Source:0)
_PyEval_EvalFrameDefault (Unknown Source:0)
_PyEval_EvalCodeWithName (Unknown Source:0)
_PyFunction_FastCallDict (Unknown Source:0)
_PyObject_Call_Prepend (Unknown Source:0)
[Unknown/Just-In-Time compiled code] (Unknown Source:0)
_PyObject_FastCallKeywords (Unknown Source:0)
_PyEval_EvalFrameDefault (Unknown Source:0)
[Unknown/Just-In-Time compiled code] (Unknown Source:0)
_PyFunction_FastCallDict (Unknown Source:0)
bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) (/home/jacques/blender-git/blender/source/blender/python/intern/bpy_rna.c:7926)
rna_operator_invoke_cb(bContext * C, wmOperator * op, const wmEvent * event) (/home/jacques/blender-git/blender/source/blender/makesrna/intern/rna_wm.c:1285)
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1327)
wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler, wmEvent * event, PointerRNA * properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2045)
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2347)
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2693)
wm_event_do_handlers(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3082)
WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:427)
main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:523)
The error happens during selection. ``` __GI_raise(int sig) (/build/glibc-OTsEL5/glibc-2.27/sysdeps/unix/sysv/linux/raise.c:51) __GI_abort() (/build/glibc-OTsEL5/glibc-2.27/stdlib/abort.c:79) __assert_fail_base(const char * fmt, const char * assertion, const char * file, unsigned int line, const char * function) (/build/glibc-OTsEL5/glibc-2.27/assert/assert.c:92) __GI___assert_fail(const char * assertion, const char * file, unsigned int line, const char * function) (/build/glibc-OTsEL5/glibc-2.27/assert/assert.c:101) GPU_vertbuf_raw_step(GPUVertBufRaw * a) (/home/jacques/blender-git/blender/source/blender/gpu/GPU_vertex_buffer.h:108) mesh_create_edit_select_id(MeshRenderData * rdata, GPUVertBuf * vbo_pos, GPUVertBuf * vbo_verts, GPUVertBuf * vbo_edges, GPUVertBuf * vbo_faces) (/home/jacques/blender-git/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:2680) DRW_mesh_batch_cache_create_requested(Object * ob, Mesh * me, const ToolSettings * ts, const _Bool is_paint_mode, const _Bool use_hide) (/home/jacques/blender-git/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:5387) draw_object_backbufsel(Depsgraph * depsgraph, Scene * scene, View3D * v3d, RegionView3D * rv3d, Object * ob, short select_mode) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/drawobject.c:296) backdrawview3d(struct Depsgraph * depsgraph, Scene * scene, ARegion * ar, View3D * v3d, Object * obact, Object * obedit, short select_mode) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_draw_legacy.c:263) ED_view3d_backbuf_validate_with_select_mode(ViewContext * vc, short select_mode) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_draw_legacy.c:303) ED_view3d_backbuf_validate(ViewContext * vc) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_draw_legacy.c:309) unified_findnearest(ViewContext * vc, Base **bases, const uint bases_len, int * r_base_index, BMVert** r_eve, BMEdge **r_eed, BMFace** r_efa) (/home/jacques/blender-git/blender/source/blender/editors/mesh/editmesh_select.c:1032) EDBM_select_pick(bContext * C, const int * mval, _Bool extend, _Bool deselect, _Bool toggle) (/home/jacques/blender-git/blender/source/blender/editors/mesh/editmesh_select.c:2060) view3d_select_exec(bContext * C, wmOperator * op) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_select.c:1959) view3d_select_invoke(bContext * C, wmOperator * op, const wmEvent * event) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_select.c:1994) wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1327) wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const _Bool poll_only, wmEvent * event) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1570) WM_operator_call_py(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties, ReportList * reports, const _Bool is_undo) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1648) pyop_call(PyObject * UNUSED_self, PyObject * args) (/home/jacques/blender-git/blender/source/blender/python/intern/bpy_operator.c:260) _PyMethodDef_RawFastCallKeywords (Unknown Source:0) _PyCFunction_FastCallKeywords (Unknown Source:0) _PyEval_EvalFrameDefault (Unknown Source:0) _PyEval_EvalCodeWithName (Unknown Source:0) _PyFunction_FastCallDict (Unknown Source:0) _PyObject_Call_Prepend (Unknown Source:0) [Unknown/Just-In-Time compiled code] (Unknown Source:0) _PyObject_FastCallKeywords (Unknown Source:0) _PyEval_EvalFrameDefault (Unknown Source:0) [Unknown/Just-In-Time compiled code] (Unknown Source:0) _PyFunction_FastCallDict (Unknown Source:0) bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) (/home/jacques/blender-git/blender/source/blender/python/intern/bpy_rna.c:7926) rna_operator_invoke_cb(bContext * C, wmOperator * op, const wmEvent * event) (/home/jacques/blender-git/blender/source/blender/makesrna/intern/rna_wm.c:1285) wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1327) wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler, wmEvent * event, PointerRNA * properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2045) wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2347) wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2693) wm_event_do_handlers(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3082) WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:427) main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:523) ```
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

The use of raw_pos in mesh_create_edit_select_id is wrong. The GPU_vertbuf_raw_step function is called too often on that buffer.

The use of `raw_pos` in `mesh_create_edit_select_id` is wrong. The `GPU_vertbuf_raw_step` function is called too often on that buffer.

This issue was referenced by dc7e492989

This issue was referenced by dc7e492989408038c89b5283ec5710b98457696f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60545
No description provided.